--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
           target_branch: gh_pages
           build_dir: build
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+          OPEN_WEATHER_KEY: ${{ seecret.OPEN_WEATHER_KEY }}
