--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name:
-        uses: Setup node
+      - name: Setup node
         uses: actions/setup-node@1
         with:
           node-version: "14.x"
