--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
           build_dir: build
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
-          OPEN_WEATHER_KEY: ${{ seecret.OPEN_WEATHER_KEY }}
+          OPEN_WEATHER_KEY: ${{ secrets.OPEN_WEATHER_KEY }}
