--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - run: npm run build
       - run: npm test
       - name: Deploy
-        uses: crazy-max/ghaction-github-pages@1
+        uses: crazy-max/ghaction-github-pages@v1
         with: 
           target_branch: gh_pages
           build_dir: build
